Bug 1736795 [Linux] Export titlebar radius as int from LookAndFeel, r=emilio

Titlebar radius is exported as integer from Gtk so there's no need to use floats here.

Differential Revision: https://phabricator.services.mozilla.com/D128993